<resources>
    <string name="app_name">Compromissos</string>
    <string name="btCadEvent_home">Novo Evento</string>
    <string name="btVoltar_cadEvent">Editar</string>
    <string name="tv_cadEvent">Data:</string>
    <string name="tvHora_cadEvent">Hora:</string>
    <string name="tvTermino_cadEvent">Termino:</string>
    <string name="tvLocal_cadEvent">Local:</string>
    <string name="tvDescricao_cadEvent">Descrição:</string>
    <string name="tvParticipantes_cadEvent">Participantes:</string>
    <string name="tvTipoEvent_cadEvent">Tipo de Evento:</string>
    <string name="btAdc_cadEvent">Adicionar</string>
    <string name="etRepetir_cadEvent">Repetir:</string>
    <string name="rbSim_CadEvent">Sim</string>
    <string name="rbNao_cadEvent">Não</string>
    <string name="btAtualizar_AtuaEvent">Atualizar</string>
    <string name="btExcluirEvent">Excluir</string>
    <string name="tvBuscarEvent_home">Procurar :</string>
    <string name="btBuscarEvent_home">Buscar</string>
    <string name="tvData_itemEventos">Data</string>
    <string name="tvLocal_itemEventos">Local</string>
    <string name="tvExibeData_itemEventos">Data:</string>
    <string name="tvExibeLocal_itemEventos">Local:</string>
    <string name="tvExibeDescricao_itemEventos">Descrição:</string>
    <string name="tvRepetircao_repetir">Repetição:</string>
    <string name="tvRepetCada_repetir">Repete\n a cada:</string>
    <string name="btEditar_detalheEvent">Editar</string>
    <string name="tvInicioEm_repetir">Início em:</string>
    <string name="tvTermina_repetir">Termina:</string>
    <string name="rbTepeteSempre_repetir">Sempre</string>
    <string name="rbTepeteApos_repetir">Após</string>
    <string name="rbTepeteEm_repetir">Em</string>
    <string name="tvRepeteApos_repetir">Ocorrências</string>
    <string name="tvResumo_repetir">Resumo:</string>
    <string name="tvResultResumo_repetir" />
    <string name="btConcluido_repetir">Concluido</string>
    <string name="btCancelar_repetir">Cancelar</string>
    <string name="tvRepetir_detaEvent">Repetir:</string>
    <string name="tv_cadInicio_cadEventRepet">Iniciado em:</string>
    <string name="tv_termina_cadEventRepet">Termina: </string>
    <string name="tvRepeticao_cadEventRepet">Repetição:</string>
    <string name="tvRepetAcada_cadEventRepet">A cada:</string>
    <string name="btVoltar_cadEvent2">Voltar</string>
    />

    <string-array name="tipoEvento">
        <item>  </item>
        <item>Saúde</item>
        <item>Família</item>
        <item>Escola</item>
        <item>Trabalho</item>
        <item>Lazer</item>
    </string-array>

    <string-array name="repeticao">
        <item>  </item>
        <item>Diariamente</item>
        <item>Semanalmente</item>
        <item>Anualmente</item>
    </string-array>

    <string-array name="tempoRepeticao">
        <item>  </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>


    </string-array>

</resources>
