<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ftads.compromissos.detalhesEvento"
    android:background="@drawable/bg">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_cadEvent"
                android:id="@+id/tvData_detEvent"
                android:gravity="right"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/etData_detEvent"
                android:background="#ffffff"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:onClick="setBtEditarData" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvHora_cadEvent"
                android:id="@+id/tvHora_detEvent"
                android:gravity="right"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etHora_detEvent"
                android:inputType="text"
                android:background="#ffffff"
                android:textColor="#000000"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvTermino_cadEvent"
                android:id="@+id/tvTermino_detEvent"
                android:gravity="right"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/etTermino_detEvent"
                android:inputType="text"
                android:background="#ffffff"
                android:textColor="#000000"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="51dp">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvLocal_cadEvent"
                android:id="@+id/tvLocal_detEvent"
                android:gravity="right"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etLocal_detEvent"
                android:background="#fffefe"
                android:textColor="#000000"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:weightSum="1">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvDescricao_cadEvent"
                android:id="@+id/tvDescricao_detEvent"
                android:gravity="right"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etDescricao_detEvent"
                android:background="#ffffff"
                android:textColor="#000000"
                android:gravity="center_horizontal"
                android:layout_weight="0.21" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:weightSum="1">

                <TextView
                    android:layout_width="210px"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvParticipantes_cadEvent"
                    android:id="@+id/tvParticipantes_detEvent"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:layout_weight="0.39" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etParticipante_detEvent"
                    android:background="#ffffff"
                    android:textColor="#000000"
                    android:gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="fill_horizontal|center_vertical"
            android:weightSum="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="173dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvTipoEvent_cadEvent"
                    android:id="@+id/tvTipoEvent_cadEvent"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <Spinner
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_TipoEvento_detEvent"
                    android:gravity="center_horizontal|left"
                    android:background="#ffffff"
                    android:clickable="false"
                    android:transitionGroup="false"
                    android:contextClickable="false" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="78dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/etRepetir_cadEvent"
                    android:id="@+id/tvRepetir_detEvent"
                    android:textColor="#000000"
                    android:gravity="center_horizontal" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/etExibeSitRepet_detalhesEvent"
                    android:background="#ffffff"
                    android:layout_weight="0.28"
                    android:gravity="center_horizontal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvRepeticao_cadEventRepet"
                android:id="@+id/tvRepeticao_cadEventRepet"
                android:textColor="#000000" />

            <Spinner
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_Repeticao_cadEventRepet"
                android:gravity="left"
                android:background="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvRepetAcada_cadEventRepet"
                android:id="@+id/tvACada_cadEventRepet"
                android:textColor="#000000" />

            <Spinner
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_RepetCada_cadEventRepet"
                android:gravity="left"
                android:background="#ffffff" />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_cadInicio_cadEventRepet"
                android:id="@+id/tvCadInico_cadEvent_Repet"
                android:gravity="right"
                android:textColor="#000000" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/et_cadInicio_cadEventRepet"
                android:background="#ffffff"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_termina_cadEventRepet"
                android:id="@+id/tvtermina_cadEvent_Repet"
                android:gravity="right"
                android:textColor="#000000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/et_termina_cadEventRepet"
                android:background="#ffffff"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btEditar_detalheEvent"
                    android:id="@+id/btEdit_detalheEvent" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btAtualizar_AtuaEvent"
                    android:id="@+id/btAtualizar_detalheEvent"
                    android:onClick="setBtAtualizar_detalheEvent" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btVoltar_cadEvent"
                    android:id="@+id/btVoltar_detalheEvent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btExcluirEvent"
                    android:id="@+id/btExcluir_detalheEvent"
                    android:onClick="excluir_detalheEvent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
