<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03">

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tvCor" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvExibeData_itemEventos"
                    android:id="@+id/textView"
                    android:textColor="#000000"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_weight="0.03" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvData"
                    android:text="@string/tvData_itemEventos"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvExibeDescricao_itemEventos"
                    android:id="@+id/tvExibeDescricao_itemEventos"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.03" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Descrição"
                    android:id="@+id/tvDescricao"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tvExibeLocal_itemEventos"
                    android:id="@+id/tvLocal_itemEventos"
                    android:textColor="#000000"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:layout_weight="0.03" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/tvLocal"
                    android:text="@string/tvLocal_itemEventos"
                    android:textColor="#000000" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>